boost tokenizer added, tristan algorithm to be implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,4 @@ else()
     add_compile_options(-O2)
 endif()
 
-add_executable(main main.cpp word_count.cpp word_count.h all_in_memory_tokenizing.cpp all_in_memory_tokenizing.h)
+add_executable(main main.cpp word_count.cpp word_count.h tristan_tokenizing_algorithm.cpp tristan_tokenizing_algorithm.h boost_way_of_tokenizing.cpp boost_way_of_tokenizing.h read_textfile_in_string.cpp read_textfile_in_string.h)
